--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,11 @@
   html {
     @apply scroll-smooth;
   }
-  .btn-primary {
-    @apply bg-gradient-to-r from-[#6fc6e9] to-[#4b34c2] text-white;
+  .text-primary {
+    @apply text-[#181818];
+  }
+  .text-secondary {
+    @apply text-gray-500;
   }
   .container-fluid {
     @apply lg:w-9/12 md:w-10/12 w-11/12  mx-auto  p-3 rounded-lg overflow-hidden;
@@ -30,4 +33,5 @@
 body {
   /* background-color: #07080e; */
   background-color: whitesmoke;
+  color: #181818;
 }
